test/badControlUncomp.slq
// args: --run

def main(){
	x:=1:ğ”¹;
	y:=H(dup(x));
	if y {
		phase(Ï€);
	}
	y:=H(y);
	assert(measure(y=x)); // error
	forget(y=x);
	return x;
}
